infrastructure/kubernetes/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kazibet-api-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kazibet-api
  ports:
    - port: 80
      targetPort: 4000
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kazibet-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.kazibet.com
        - sports.kazibet.com
      secretName: kazibet-tls-cert
  rules:
    - host: api.kazibet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kazibet-api-svc
                port:
                  number: 80
